refactor: rebuild canvas backend on uuid storage